--- a/03Search/Search/Search.vcxproj.filters
+++ b/03Search/Search/Search.vcxproj.filters
@@ -23,5 +23,17 @@
     <ClInclude Include="SequenceSearch.h">
       <Filter>头文件</Filter>
     </ClInclude>
+    <ClInclude Include="BinarySearch.h">
+      <Filter>头文件</Filter>
+    </ClInclude>
+    <ClInclude Include="FibonacciSearch.h">
+      <Filter>头文件</Filter>
+    </ClInclude>
+    <ClInclude Include="InsertionSearch.h">
+      <Filter>头文件</Filter>
+    </ClInclude>
+    <ClInclude Include="BinarySearchTree.h">
+      <Filter>头文件</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
