--- a/04Tree/HuffmanCode/HuffmanCode/HuffmanCode.vcxproj.filters
+++ b/04Tree/HuffmanCode/HuffmanCode/HuffmanCode.vcxproj.filters
@@ -19,4 +19,12 @@
       <Filter>源文件</Filter>
     </ClCompile>
   </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="HTNode.h">
+      <Filter>头文件</Filter>
+    </ClInclude>
+    <ClInclude Include="Huffman.h">
+      <Filter>头文件</Filter>
+    </ClInclude>
+  </ItemGroup>
 </Project>
